--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                 case "WBRG":
                     color1 = "#e3e3e3"
                     color2 = "#212121"
-                    color3 = "#212121"
+                    color3 = "#d94100"
                     color4 = "#248000"
                     break;
                 case "WURG":
@@ -370,7 +370,7 @@
                 color: function () {
                     return ([color1, color2, color3, color4, color5])[Math.floor(Math.random() * 5)]
                 },
-                fontFamily: 'Corbel',
+                fontFamily: 'Tahoma',
                 fontWeight: '900',
                 backgroundColor: '#313338',
                 minRotation: 0,
@@ -410,7 +410,7 @@
 
     </script>
     <p style="font-family:arial;">
-        <i>2023 Fisz-git v. 1.5.1</i><br>
+        <i>2023 Fisz-git v. 1.5.2</i><br>
         <i>Card data obtained courtesy of Scryfall API <a
                 href="https://scryfall.com/docs/api">https://scryfall.com/docs/api</a></i><br>
         <i>Word cloud generated using wordcloud2.js <a
